.helm/config/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gin-train-ticket-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`gtt.liuma.top`)
      kind: Rule
      services:
        - name: gin-train-ticket
          port: 8000

# 自签名
# openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout tls.key -out tls.crt -subj "/CN=who.liuma.top"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gin-train-ticket-route-secure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gtt.liuma.top`)
      kind: Rule
      services:
        - name: gin-train-ticket
          port: 8000
  tls:
    secretName: who-tls
